# MVDTool

./: .clang-format  .gitignore  .gitmodules  .gitreview  .travis.yml  AUTHORS.txt  CHANGELOG  CHANGELOG.md  CMakeLists.txt  LICENSE  MANIFEST.in  README  README.md  default.nix  setup.cfg  setup.py
.github/workflows/: build-publish-pypackage.yml  publish-sdist.yml
CMake/: AddHighFiveSubmodule.cmake  AddLibsonataSubmodule.cmake  MVDToolConfig.cmake.in  PackageConfig.cmake
CMake/config/: DefineInstallationPaths.cmake  OptionRebuildSrcFile.cmake
include/: mvd
include/mvd/: mvd2.hpp  mvd3.hpp  mvd_base.hpp  mvd_except.hpp  mvd_generic.hpp  sonata.hpp
include/mvd/bits/: mvd2_misc.hpp  mvd3_misc.hpp  sonata_misc.hpp
include/mvdtool/: mvd2.hpp  mvd3.hpp  mvd_base.hpp  mvd_except.hpp  mvd_generic.hpp  sonata.hpp  tsv.hpp  tsv_except.hpp  utils.hpp
include/mvdtool/bits/: mvd2_misc.hpp  mvd3_misc.hpp  sonata_misc.hpp  tsv_misc.hpp
python/: CMakeLists.txt  mvdtool.cpp  mvdtool.pyx  setup.py
python/include/: MVD3.pxd  MVD_MVDType.pxd  __init__.py  std.pxd
python/includes/: MVD.pxd  MVD2.pxd  MVD3.pxd  MVD_MVDType.pxd  _globalns.pxd  boost.pxd  mvd2data.hpp
python/test/: circuit.mvd2  circuit.mvd3  circuit_tsv.mvd3  mecombo_emodel.tsv  mecombo_emodel_tabs.tsv  nodes.h5  read_mvd2.py  read_mvd3.py  sonata.h5  sonata_alt.h5  test_mvd3.py
src/: CMakeLists.txt  converter.cpp  converter.hpp  mvd-tool.cpp  neuroninfo.hpp
tests/: circuit.mvd3  circuit_tsv.mvd3  mecombo_emodel.tsv  mecombo_emodel_tabs.tsv  mvd2sonata.py  nodes.h5  sonata.h5  sonata_alt.h5
tests/unit/: CMakeLists.txt  tests_encapsulation.cpp  tests_library.cpp  tests_library.hpp  tests_mvd2.cpp  tests_mvd3.cpp  tests_sonata.cpp  tests_tsv.cpp
